--- a/public/view/UIEntidades/admin/UIEntidades.css
+++ b/public/view/UIEntidades/admin/UIEntidades.css
@@ -37,15 +37,10 @@
     background-color: var(--colorBackground)!important;
 }
 
-#entity-space {
+#entity-space, #space-attr-entity {
     overflow-y: scroll;
     overflow-x: hidden;
-    max-height: calc(100vh - 134px);
-}
-
-#space-attr-entity {
-    overflow-y: scroll;
-    overflow-x: hidden;
+    max-height: calc(100vh - 64px);
 }
 
 .card {
