--- a/public/view/UIEntidades/admin/UIEntidades.css
+++ b/public/view/UIEntidades/admin/UIEntidades.css
@@ -6,9 +6,10 @@
     position: fixed;
     top: inherit;
     left: 0;
-    width: 250px;
+    width: 260px;
     height: 100%;
-    z-index: 3;
+    z-index: 9999;
+    background: var(--colorBackground);
 }
 
 #user {
@@ -18,7 +19,7 @@
 #nav-menu {
     position: fixed;
     top: inherit;
-    left: 250px;
+    left: 260px;
     width: 300px;
     height: 100%;
     z-index: 2;
@@ -30,7 +31,7 @@
     overflow-x: hidden;
     top: inherit;
     left:0;
-    padding: 20px 20px 20px 570px;
+    padding: 20px 20px 20px 580px;
     width: 100%;
     height: 100%;
     z-index: 1;
