--- a/public/view/UIEntidades/admin/UIEntidades.css
+++ b/public/view/UIEntidades/admin/UIEntidades.css
@@ -5,11 +5,26 @@
 #nav-entity {
     position: fixed;
     top: inherit;
-    left: 0;
+    left: -260px;
     width: 260px;
     height: 100%;
     z-index: 9999;
+    transition: ease left .5s;
     background: var(--colorBackground);
+}
+
+.text-await {
+    padding-left: 20%;
+    margin-top: -100px;
+    transition: ease margin-top .2s;
+}
+
+.text-await.active {
+    margin-top: 0!important;
+}
+
+#nav-entity.active {
+    left: 0!important;
 }
 
 #user {
@@ -19,19 +34,21 @@
 #nav-menu {
     position: fixed;
     top: inherit;
-    left: 260px;
+    left: -300px;
     width: 300px;
     height: 100%;
+    transition: ease left .7s;
     z-index: 2;
 }
 
+#nav-menu.active {
+    left: 260px;
+}
+
 #main {
-    position: fixed;
     overflow-y: scroll;
     overflow-x: hidden;
-    top: inherit;
-    left:0;
-    padding: 20px 20px 20px 580px;
+    padding: 20px 20px 20px 320px;
     width: 100%;
     height: 100%;
     z-index: 1;
